Correction d'un problème de z-index et correction de l'input de recherche sur la navbar.

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -79,7 +79,7 @@
             height: 100%;
             opacity: 0.5;
             transition: opacity .1s;
-            z-index: 100;
+            z-index: 50;
 
             &:hover {
                 opacity: 1;
